# WebScraper

./: .gitignore  CMakeLists.txt  HelloWorld.cpp  HelloWorld.h  HelloWorld.hpp  WebScraper.entitlements  WebScraper.h  main.cpp
Crawler/: Crawler.cpp  Crawler.hpp
MarketTracker/: MarketTracker.cpp  MarketTracker.hpp
OCSet/: OCSet.cpp  OCSet.hpp
Scraper/: CMakeLists.txt  Scraper.cpp  Scraper.hpp
WebScraper/: main.cpp
WebScraper.xcodeproj/: project.pbxproj
WebScraper/StockTracker/: StockTracker.cpp  StockTracker.hpp
